# qalamos

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
config/: __init__.py  base.py  development.py  production.py
frontend/: index.html  script.js  styles.css
qalamos/: main.py
qalamos/transliteration/: transliterator.py
tests/: test_transliterator.py
