[tool.poetry]
name = "qalamos"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@rasha.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mishkal = "^0.4.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
