[tool.poetry]
name = "qalamos"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@rasha.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mishkal = "^0.4.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
